Backup after test publish